<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- sign_up -->
    <string name="app_name">AU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name:</string>
    <string name="name_tips">PLEASE INPUT YOUR NAME</string>
    <string name="pds">Passwords:</string>
    <string name="pds_tips">PLEASE INPUT YOUR PASSWORDS</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="years">Living Years:</string>
    <string name="email">Email Address:</string>
    <string name="phone">Phone:</string>
    <string name="english">English Level:</string>
    <string name="chinese">Chinese Level:</string>
    <string name="high">High</string>
    <string name="middle">Middle</string>
    <string name="low">Low</string>
    <string name="tag">Tag:</string>
    <string name="medical">Medical Treatment</string>
    <string name="education">Education</string>
    <string name="tenement">Tenement</string>
    <string name="car">Car Purchase</string>
    <string name="dining">Dining</string>
    <string name="shopping">Shopping</string>
    <string name="instant">Instant Help</string>
    <string name="submit">SUBMIT</string>
    <string name="pds_con">Confirm:</string>
    <!-- main_choice -->
    <string name="welcome">WELCOME!</string>
    <string name="sign">Sign Up</string>
    <string name="login">Log In</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dep">DepActivity</string>
    <!-- dsp -->
    <string name="dsp">Description:</string>
</resources>
