<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="1,2"
    >
        <TableRow
            android:layout_marginTop="50dp">
		    <TextView
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/dsp"/>
		    <EditText
		   			android:id="@+id/name"
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="textMultiLine"/>
	    </TableRow>	
	    <TableRow>      
		     <TextView
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/tag"/>
		        <LinearLayout 
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content"
		            android:orientation="vertical">
		            <CheckBox 
		                android:id="@+id/ins1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/instant"/>
		            <CheckBox 
		                android:id="@+id/med1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/medical"/>
		            <CheckBox 
		                android:id="@+id/edu1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/education"/>
		            <CheckBox 
		                android:id="@+id/ten1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/tenement"/>
		            <CheckBox 
		                android:id="@+id/car1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/car"/>
		            <CheckBox 
		                android:id="@+id/din1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/dining"/>
		            <CheckBox 
		                android:id="@+id/sho1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/shopping"/>
		        </LinearLayout>
		</TableRow>
		<TableRow
		    android:layout_marginTop="30dp">
		    <Button 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_margin="5dip"
					android:text="@string/submit"
					android:layout_span="2"
					android:onClick="Sign_confirm"
					/>		
		</TableRow>
</TableLayout>