<?xml version="1.0" encoding="utf-8"?>
<!-- creating scrollbar -->
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
	    <TableLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"	 
	        android:stretchColumns="1,2,3"  
	        android:shrinkColumns="0"
	        >
	    	<TableRow>
		        <TextView
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/name"/>
		        <EditText
		            android:id="@+id/name"
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="text"/>
	        </TableRow>	
	        <TableRow>      
		    	<TextView
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/pds"/>
		    	<EditText
		    	    android:id="@+id/pds"
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="textPassword"/> 
		    </TableRow>
		    <TableRow>      
		    	<TextView
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/pds_con"/>
		    	<EditText
		    	    android:id="@+id/pds_con"
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="textPassword"/> 
		    </TableRow>
		    <View
		        android:layout_height="2dip"
		        android:background="#00cc33"
		        android:layout_margin="5dip"/>
	        <TableRow>
	            <TextView 
	                android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/gender"/>
		        <RadioGroup
		            android:id="@+id/gender"
				    android:orientation="horizontal"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
			    >
					<RadioButton
					    android:id="@+id/m"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/male" >
					</RadioButton>			
					<RadioButton
					    android:id="@+id/f"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/female">
					</RadioButton>
				</RadioGroup>
			</TableRow>
			<TableRow>     
		    	<TextView
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/email"/>
		    	<EditText
		    	    android:id="@+id/email"
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="textWebEmailAddress"/>
			</TableRow>
			<TableRow>     
		    	<TextView
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/phone"/>
		    	<EditText
		    	    android:id="@+id/phone"
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="phone"/>			
		    </TableRow>
			<TableRow>     
		    	<TextView
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/years"/>
		    	<EditText
		    	    android:id="@+id/years"
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="text"/> 
			</TableRow>
			<View
		        android:layout_height="2dip"
		        android:background="#00cc33"
		        android:layout_margin="5dip"/>
			<TableRow>
		        <TextView
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/english"/>
		        
		            <RadioGroup
		                android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
		                android:id="@+id/eng">
		                <RadioButton
		                    android:id="@+id/hi"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/high">
		                </RadioButton>
		                <RadioButton
		                    android:id="@+id/mi"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/middle">
		                </RadioButton>
		                <RadioButton 
		                    android:id="@+id/lo"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/low">
		                </RadioButton>
		           </RadioGroup>
		        
		    </TableRow>
		    <View
		        android:layout_height="2dip"
		        android:background="#00cc33"
		        android:layout_margin="5dip"/>
		    <TableRow>
		        <TextView
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/chinese"/>
		        
		            <RadioGroup
		                android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
		                android:id="@+id/chn">
			            <RadioButton
			                android:id="@+id/hi1"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/high">
			            </RadioButton>
			            <RadioButton
			                android:id="@+id/mi1"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/middle">
			            </RadioButton>
			            <RadioButton 
			                android:id="@+id/lo1"
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/low">
			            </RadioButton>
		            </RadioGroup>
		    </TableRow>
		    <View
		        android:layout_height="2dip"
		        android:background="#00cc33"
		        android:layout_margin="5dip"/>
		    <TableRow>
		        <TextView
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/tag"/>
		        <LinearLayout 
		            android:layout_height="wrap_content"
		            android:layout_width="wrap_content"
		            android:orientation="vertical">
		            <CheckBox 
		                android:id="@+id/ins"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/instant"/>
		            <CheckBox 
		                android:id="@+id/med"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/medical"/>
		            <CheckBox 
		                android:id="@+id/edu"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/education"/>
		            <CheckBox 
		                android:id="@+id/ten"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/tenement"/>
		            <CheckBox 
		                android:id="@+id/car"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/car"/>
		            <CheckBox 
		                android:id="@+id/din"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/dining"/>
		            <CheckBox 
		                android:id="@+id/sho"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/shopping"/>
		        </LinearLayout>
		    </TableRow>
	    	<View
		        android:layout_height="2dip"
		        android:background="#00cc33"
		        android:layout_margin="3dip"/>
			<Button 
			    android:id="@+id/btn_sign_up"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dip"
				android:text="@string/submit"
				android:onClick="Sign_confirm"/>
		</TableLayout>
</ScrollView>