<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0,1,2"
    >"
    
    <TableRow
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp">
        <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_span="2"
		    android:layout_marginBottom="20dip"
		    android:textSize="8pt"
		    android:text="@string/welcome"/>
    </TableRow>
	<TableRow>
	    <Button 
	        android:id="@+id/btn_sign"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sign"
	    	android:onClick="Sign_up"/>
	    <Button
	        android:id="@+id/btn_log"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login"
			android:onClick="Log_in"/>
	</TableRow>
</TableLayout>
