<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:stretchColumns="1,2"
    >
        <TableRow
            android:layout_marginTop="50dp">
		    <TextView
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/name"/>
		    <EditText
		        	android:id="@+id/name1"
		            android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="text"/>
	    </TableRow>	
	    <TableRow>      
		    <TextView
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:layout_gravity="center_vertical"
		       		android:layout_marginLeft="8dip"
		       		android:textSize="8pt"
		       		android:text="@string/pds"/>
		    <EditText
		        	android:id="@+id/pds1"
		    	    android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		       		android:inputType="textPassword"/> 
		</TableRow>
		<TableRow
		    android:layout_marginTop="30dp">
		    <Button 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_margin="5dip"
					android:text="@string/submit"
					android:layout_span="2"
					android:onClick="login_confirm"
					/>		
		</TableRow>
</TableLayout>
